--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author:kilitbilgi
 Author URI: http://www.kilitbilgi.com
 Tags:responsive,2 columns,light
 Description:Responsive Blog Skin
-Version: 1.0
+Version: 2.0
 */
 html,body{
 background:#fbfdfd;
@@ -16,6 +16,7 @@ width:100%;
 height:48px;
 background:#3498db;
 border-bottom:4px solid #2980b9;
+z-index:5000;
 }
 .navigation{
 width:auto;
@@ -322,6 +323,7 @@ height:72px;
 word-wrap:break-word;
 font-size:13px;
 color:#939393;
+overflow:hidden;
 }
 .post-single{
 padding-top:10px;
@@ -725,6 +727,16 @@ padding:2px 0 0 0;
 }
 .hide{
 display:none;
+}
+/*CSS Hack For Wp-Nav Dropdown Menu*/
+.sub-menu{
+display:none;
+}
+.related_item img,.related_item div{
+float:left;
+margin-right:15px;
+width:100px;
+height:100px;
 }
 ::-webkit-input-placeholder {color:#ffffff;}
 ::-moz-placeholder {color:#ffffff;}
